--- a/.github/workflows/webpacks.yml
+++ b/.github/workflows/webpacks.yml
@@ -69,6 +69,9 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+    - name: Display structure of files
+      run: ls -R
+    
     - name: Download and Combine Pages
       uses: actions/download-artifact@v5
         
