--- a/.github/workflows/webpacks.yml
+++ b/.github/workflows/webpacks.yml
@@ -69,9 +69,9 @@ jobs:
         echo '<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"> \
           <title>JS in Browser HomeWorks</title></head><body>' > index.html
         ls -d */ > dirlist
-        sed -E 's/((^.*?$))/<li><a href="\1">\1<\/a><\/li>/g' dirlist
-        cat dirlist >> index.html
+        sed -E 's/((^.*?$))/<li><a href="\1">\1<\/a><\/li>/g' dirlist >> index.html
         echo '</body></html>' >> index.html 
+        cat index.html
         rm dirlist
         
     - name: Display structure of files
