--- a/.github/workflows/webpacks.yml
+++ b/.github/workflows/webpacks.yml
@@ -31,9 +31,9 @@ jobs:
       run: |  
         regex_page_path=$(echo "${{ matrix.page-path }}" | sed 's/[.\/]/\\&/g')
         git show --dirstat HEAD        
-        git show --dirstat HEAD | grep -e $regex_page_path -e github || 
-          wget -r -np -P ${{ matrix.page-path }}dist $HOME_URL${{ matrix.page-name }} &&
-          echo 'saved=true' >> $GITHUB_OUTPUT
+        git show --dirstat HEAD | grep -e $regex_page_path -e github) || 
+          (echo 'grep status='?; wget -r -np -P ${{ matrix.page-path }}dist $HOME_URL${{ matrix.page-name }}) &&
+          (echo 'wget status='?; echo 'saved=true' >> $GITHUB_OUTPUT)
         echo 'saved = '${{ steps.old_page.outputs.saved }}
 
     - name: Use Node.js ${{ matrix.node-version }}
