--- a/.github/workflows/webpacks.yml
+++ b/.github/workflows/webpacks.yml
@@ -31,7 +31,7 @@ jobs:
       run: |  
         regex_page_path=$(echo "${{ matrix.page-path }}" | sed 's/[.\/]/\\&/g')
         git show --dirstat HEAD --name-only       
-        git show --dirstat --name-only HEAD | grep -e $regex_page_path -e github || 
+        git show --dirstat --name-only HEAD | grep -e $regex_page_path -e workflows || 
           ((echo 'grep status='$?; wget -r -np -P ${{ matrix.page-path }}dist $HOME_URL${{ matrix.page-name }}) &&
           (echo 'wget status='$?; echo 'saved=true' >> $GITHUB_OUTPUT))
 
@@ -44,7 +44,7 @@ jobs:
     - name: Build
       if: ${{steps.old_page.outputs.saved != true }}
       run: |
-        echo save 'saved='${{ steps.old_page.outputs.saved }}
+        echo 'saved='${{ steps.old_page.outputs.saved }}
         cd ${{ matrix.page-path }}        
         npm install
         npx eslint
