--- a/.github/workflows/webpacks.yml
+++ b/.github/workflows/webpacks.yml
@@ -33,9 +33,11 @@ jobs:
         regex_page_path=$(echo "${{ matrix.page-path }}" | sed 's/[.\/]/\\&/g')
         echo 'regex_page_path='$regex_page_path
         echo ${{ matrix.page-path }}dist $HOME_URL/${{ matrix.page-name }}
-        git show --dirstat --name-only HEAD | grep -e $regex_page_path -e workflows || 
-          ((echo 'grep status='$?; wget -r -np -P ${{ matrix.page-path }}dist $HOME_URL/${{ matrix.page-name }}) &&
-          (echo 'wget status='$?; echo 'saved=true' >> $GITHUB_OUTPUT))
+        git show --dirstat --name-only HEAD | grep -e $regex_page_path -e workflows || ((
+            echo 'grep status='$?; 
+            wget -r --no-parent --no-host-directories --cut-dirs=2 -P ./${{ matrix.page-name }}/dist $HOME_URL/${{ matrix.page-name }};
+            mv ./${{ matrix.page-name }}/dist/${{ matrix.page-name }} ./${{ matrix.page-name }}/dist/index.html
+          ) && (echo 'wget status='$?; echo 'saved=true' >> $GITHUB_OUTPUT))
         ls -R
 
     - name: Use Node.js ${{ matrix.node-version }}
