--- a/.github/workflows/webpacks.yml
+++ b/.github/workflows/webpacks.yml
@@ -35,8 +35,8 @@ jobs:
         echo ${{ matrix.page-path }}dist $HOME_URL/${{ matrix.page-name }}
         git show --dirstat --name-only HEAD | grep -e $regex_page_path -e workflows || ((
             echo 'grep status='$?; 
-            wget -r --no-parent --no-host-directories --cut-dirs=2 -P ./${{ matrix.page-name }}/dist $HOME_URL/${{ matrix.page-name }};
-            mv ./${{ matrix.page-name }}/dist/${{ matrix.page-name }} ./${{ matrix.page-name }}/dist/index.html
+            wget -r --no-parent --no-host-directories --cut-dirs=2 -P ./${{ matrix.page-path }}/dist $HOME_URL/${{ matrix.page-name }};
+            mv ./${{ matrix.page-path }}/dist/${{ matrix.page-name }} ./${{ matrix.page-path }}/dist/index.html
           ) && (echo 'wget status='$?; echo 'saved=true' >> $GITHUB_OUTPUT))
         ls -R
 
