--- a/.github/workflows/webpacks.yml
+++ b/.github/workflows/webpacks.yml
@@ -35,19 +35,19 @@ jobs:
         echo ${{ matrix.page-path }}dist $HOME_URL/${{ matrix.page-name }}
         git show --dirstat --name-only HEAD | grep -e $regex_page_path -e workflows || ((
             echo 'grep status='$?; 
-            wget -r --no-parent --no-host-directories --cut-dirs=2 -P ./${{ matrix.page-path }}/dist $HOME_URL/${{ matrix.page-name }};
-            mv ./${{ matrix.page-path }}/dist/${{ matrix.page-name }} ./${{ matrix.page-path }}/dist/index.html
+            wget -r --no-parent --no-host-directories --cut-dirs=2 -P ./${{ matrix.page-path }}dist $HOME_URL/${{ matrix.page-name }};
+            mv ./${{ matrix.page-path }}dist/${{ matrix.page-name }} ./${{ matrix.page-path }}dist/index.html
           ) && (echo 'wget status='$?; echo 'saved=true' >> $GITHUB_OUTPUT))
         ls -R
 
     - name: Use Node.js ${{ matrix.node-version }}
-      if: ${{steps.old_page.outputs.saved != true }}
+      if: steps.old_page.outputs.saved != true
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
    
     - name: Build
-      if: ${{steps.old_page.outputs.saved != true }}
+      if: steps.old_page.outputs.saved != true
       run: |
         echo 'saved='${{ steps.old_page.outputs.saved }}
         cd ${{ matrix.page-path }}        
