--- a/.github/workflows/webpacks.yml
+++ b/.github/workflows/webpacks.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Upload index.html
         id: deployment
-        uses: actions/upload-pages-artifact@v4
+        uses: actions/upload-artifact@v4
         with:
           path: home
           name: home
