--- a/.github/workflows/webpacks.yml
+++ b/.github/workflows/webpacks.yml
@@ -69,6 +69,7 @@ jobs:
     - name: Build with npm
       if: ${{ matrix.page.manager == 'npm' && matrix.page.republish == false }} 
       run: |
+        cd ${{ matrix.page.path }}        
         npm install
         npx eslint
         npx webpack
