--- a/.github/workflows/webpacks.yml
+++ b/.github/workflows/webpacks.yml
@@ -2,7 +2,8 @@ name: JavaScript in Browser Homeworks
 
 on:
   push:
-    branches: [ "main" ]    
+    branches: [ "main" ]  
+    paths-ignore: [ "publish" ]
 
 env:
   HOME_URL: 'https://danbzay.github.io/js-browser/'
@@ -10,6 +11,8 @@ env:
 jobs:
   configure:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
@@ -19,26 +22,32 @@ jobs:
       - name: Set matrix data from pages.json
         id: set-matrix
         run: |
-          echo "matrix=$(jq -c . < ./pages.json)" >> $GITHUB_OUTPUT
+          echo "matrix=$(jq -c '.[] | select(.build == true) < ./pages.json)" \
+          >> $GITHUB_OUTPUT
 
       - name: Create index.html
         run: | 
-          mkdir -p home;
+          mkdir -p publish;
           cat index | \
           sed -e '/\$/! s/^/echo \"/' -e '/\$/! s/$/\"/' -e '/\$/ s/\$//' | \
-          bash > home/index.html;
-          cat home/index.html;
+          bash > publish/index.html;
+          cat publish/index.html;
 
-      - name: Upload index.html
-        id: deployment
-        uses: actions/upload-artifact@v4
-        with:
-          path: home
-          name: home
+      - name: Push results to publish
+        run: |
+          git config --global user.name 'danbzay'
+          git config --global user.email 'danbzay@gmail.com'
+          git remote set-url origin https://x-access-token:${{ secrets.PAT_11 }}    @github.com/${{ github.repository }}
+          git pull;
+          git add ./publish;
+          git commit -m 'automatic saving page for future';
+          git push;
 
   build:
     runs-on: ubuntu-latest
     needs: configure
+    permissions:
+      contents: write
     strategy:
       matrix:
         page: ${{ fromJson(needs.configure.outputs.matrix) }}
@@ -49,68 +58,59 @@ jobs:
     - uses: actions/checkout@v4
       with:
           fetch-depth: 0
-
-    - name: Download published version of page
-      if: ${{ matrix.page.republish == true }}
-      continue-on-error: true
-      run: |
-        cd ${{matrix.page.path }} 
-        wget --recursive --no-parent --no-host-directories --cut-dirs=2 \
-             --directory-prefix=dist "$HOME_URL"${{ matrix.page.name }};
-        mv dist/${{ matrix.page.name }} dist/index.html 
-        ls -R
-
+    
     - name: Use Node.js ${{ matrix.node-version }}
-      if: ${{ matrix.page.republish == false }}
+      if: ${{ matrix.page.build == true }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
    
     - name: Build with npm
-      if: ${{ matrix.page.manager == 'npm' && matrix.page.republish == false }} 
+      if: ${{ matrix.page.manager == 'npm' && matrix.page.build == true }} 
       run: |
         cd ${{ matrix.page.path }}        
         npm install
         npx eslint
         npx webpack
+        cp -r dist/* $GITHUB_WORKSPACE/publish/${{ matrix.page.name }}/
 
     - name: Build with yarn
-      if: ${{ matrix.page.manager == 'yarn' && matrix.page.republish == false }}
+      if: ${{ matrix.page.manager == 'yarn' && matrix.page.build == true }}
       run: |
         cd ${{ matrix.page.path }}        
         yarn install
         yarn eslint
         yarn webpack
+        cp -r dist/* $GITHUB_WORKSPACE/publish/${{ matrix.page.name }}/
 
-
-    - name: Upload Page Artifact
-      uses: actions/upload-artifact@v4
-      with:
-        path: ${{ matrix.page.path }}dist 
-        name: ${{ matrix.page.name }}
-
+    - name: Push results to publish
+      run: |
+        git config --global user.name 'danbzay'
+        git config --global user.email 'danbzay@gmail.com'
+        git remote set-url origin https://x-access-token:${{ secrets.PAT_11 }}    @github.com/${{ github.repository }}
+        git pull;
+        git add ./publish;
+        git commit -m 'automatic saving page for future';
+        git push;
+  
   combine:
     runs-on: ubuntu-latest
     needs: build
    
     steps:
-    - name: Download and Combine Pages
-      uses: actions/download-artifact@v5
-
-    - name: Move index to root
-      run: |
-        ls -R;
-        mv home/* .;
+    - uses: actions/checkout@v4
+      with:
+          fetch-depth: 0
 
     - name: Upload Combined Pages Artifact
       id: deployment
       uses: actions/upload-pages-artifact@v4
       with:
-        path: ${{ github.workspace }}      
-          
+        path: ${{ github.workspace }}/publish      
+
   deploy:
     runs-on: ubuntu-latest
-    needs: combine
+    needs: build
     permissions:
       pages: write
       id-token: write
@@ -119,7 +119,6 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     
-    steps:
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v4
