--- a/.github/workflows/webpacks.yml
+++ b/.github/workflows/webpacks.yml
@@ -110,7 +110,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: combine
     permissions:
       pages: write
       id-token: write
