--- a/.github/workflows/webpacks.yml
+++ b/.github/workflows/webpacks.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Set matrix data from pages.json
         id: set-matrix
         run: |
-          echo "matrix=$(jq -c '.[] | select(.build == true) < ./pages.json)'" \
+          echo "matrix=$(jq -c '.[] | select(.build == true)' < ./pages.json)" \
           >> $GITHUB_OUTPUT
 
       - name: Create index.html
