--- a/.github/workflows/webpacks.yml
+++ b/.github/workflows/webpacks.yml
@@ -83,7 +83,7 @@ jobs:
 
     - name: Push results to publish
       run: |
-        mkdir -p publish/ ${{ matrix.page.name }}
+        mkdir -p ./publish/${{ matrix.page.name }}
         cp -r ${{ matrix.page.path }}dist/* ./publish/${{ matrix.page.name }}/
         git config --global user.name 'danbzay'
         git config --global user.email 'danbzay@gmail.com'
