--- a/.github/workflows/webpacks.yml
+++ b/.github/workflows/webpacks.yml
@@ -16,33 +16,33 @@ jobs:
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      - name: Set matrix data from pages.json
-        id: set-matrix
-        run: |
-          echo "matrix=$(jq -c '[.[] | select(.build == true)]' < ./pages.json)" \          >> $GITHUB_OUTPUT
+    - name: Set matrix data from pages.json
+      id: set-matrix
+      run: |
+        echo "matrix=$(jq -c '[.[] | select(.build == true)]' < ./pages.json)" \          >> $GITHUB_OUTPUT
 
-      - name: Create index.html
-        run: | 
-          mkdir -p publish;
-          cat index | \
-          sed -e '/\$/! s/^/echo \"/' -e '/\$/! s/$/\"/' -e '/\$/ s/\$//' | \
-          bash > publish/index.html;
-          cat publish/index.html;
+    - name: Create index.html
+      run: | 
+        mkdir -p publish;
+        cat index | \
+        sed -e '/\$/! s/^/echo \"/' -e '/\$/! s/$/\"/' -e '/\$/ s/\$//' | \
+        bash > publish/index.html;
+        cat publish/index.html;
 
-      - name: Push results to publish
-        continue-on-error: true
-        run: |
-          git config --global user.name 'danbzay'
-          git config --global user.email 'danbzay@gmail.com'
-          git remote set-url origin https://x-access-token:${{ secrets.PAT_11 }}@github.com/${{ github.repository }}
-          git pull;
-          git add ./publish;
-          git commit -m 'automatic saving page for future';
-          git status -uno --porcelain || git push;
-
+    - name: Push results to publish
+      continue-on-error: true
+      run: |
+        git config --global user.name 'danbzay'
+        git config --global user.email 'danbzay@gmail.com'
+        git remote set-url origin https://x-access-token:${{ secrets.PAT_11 }}@github.com/${{ github.repository }}
+        git pull;
+        git add ./publish;
+        git status -uno --porcelain || \
+        (git commit -m 'automatic saving page for future'; git push;)
+  
   build:
     runs-on: ubuntu-latest
     needs: configure
@@ -92,7 +92,9 @@ jobs:
         git pull;
         git add ./publish/${{ matrix.page.name }};
         git commit -m 'automatic saving page for future';
-        git status -uno --porcelain || git push;
+        git status -uno --porcelain || \
+        (git commit -m 'automatic saving page for future'; git push;)
+  
   
   combine:
     runs-on: ubuntu-latest
