--- a/.github/workflows/webpacks.yml
+++ b/.github/workflows/webpacks.yml
@@ -50,6 +50,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: configure
+    if: ${{ needs.configure.outputs.matrix != "[]" }}
     permissions:
       contents: write
     strategy:
