--- a/.github/workflows/webpacks.yml
+++ b/.github/workflows/webpacks.yml
@@ -21,6 +21,8 @@ jobs:
     - name: Set matrix data from pages.json
       id: set-matrix
       run: |
+        echo "matrix=$(jq -c '[.[] | select(.build == true)]' < ./pages.json)"
+        echo "fromJson(matrix)"
         echo "matrix=$(jq -c '[.[] | select(.build == true)]' < ./pages.json)" \          >> $GITHUB_OUTPUT
 
     - name: Create index.html
@@ -50,7 +52,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: configure
-    if: ${{ needs.configure.outputs.matrix != [] }}
+    # if: ${{ needs.configure.outputs.matrix != [] }}
     permissions:
       contents: write
     strategy:
